# my_sqlite

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/core/: column.h  database.h  row.h  table.h
src/core/: column.cpp  row.cpp  table.cpp
